test/scc/decl/semantic-errors/083.t
void foo(_Dllimport int a);